--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="cont">
         <h1>Tom Scarborough </h1>
 
         <nav class="navbar navbar-expand-lg navbar-dark ">
@@ -48,9 +48,11 @@
                 <button type="submit" class="btn btn-primary col-md-6">Submit</button>
             </div>
         </form>
-
+    </div>
 
 
 </body>
-
+<footer id="footer">
+    Created by Tom Scarborough.
+</footer>
 </html>
