--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <body>
     <div class="container">
-        <div id="name">Tom Scarborough </div>
+        <div id="name">Tom Scarborough 
+
+        </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <a class="nav-link" href="index.html">About</a>
@@ -32,13 +34,14 @@
                     alt="Responsive image">
             </div>
             <div class="col-md-6">
-                <p class="indexBody">     My name is Tom Scarborough. I have been working at Harris Teeter for 15 years now as an assistant
+                <p class="indexBody"> My name is Tom Scarborough. I have been working at Harris Teeter for 15 years now
+                    as an assistant
                     market manager. My goals in life are to be able to live a healthy life, and have a family. I want to
                     be able to live life without fear of being able to pay the bills. My hobbie is creating art on the
                     side, and creating code based games. I am married with 3 fur babies.
                     <br>
                     <br>
-                        I have been trained in: HTML, JavaScript, CSS, and C#. I am currently going through UNCC, and they
+                    I have been trained in: HTML, JavaScript, CSS, and C#. I am currently going through UNCC, and they
                     are giving me the knowledge to apply what I have learned in the real world environment. I have
                     worked with a group to create an app that helps cyclist find events and incidents in their area.
                 </p>
@@ -46,12 +49,18 @@
             <div class="row">
                 <div id="link">
                     <a href="https://github.com/kikaiaku" class="btn btn-primary">Github Profile</a>
-                    <a href="https://www.linkedin.com/in/thomas-scarborough-6336b144/" class="btn btn-primary">Linkedin Profile</a>
+                    <a href="https://www.linkedin.com/in/thomas-scarborough-6336b144/" class="btn btn-primary">Linkedin
+                        Profile</a>
 
-               
-            </div>
+
+                </div>
             </div>
         </div>
+    </div>
+    
 </body>
+<footer id="footer">
+    Created by Tom Scarborough.
+</footer>
 
 </html>
