updates on js and css

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -30,7 +30,8 @@
     <div class="row justify-content-center">
       <div class="col-md-6 col-lg-4">
         <div class="card" style="width: 18rem;">
-          <img alt="Card image cap" class="card-img-top img-fluid " src="assets/cyclepaths.png" class="card-img-top" alt="Cyclepaths">
+          <img alt="Card image cap" class="card-img-top img-fluid " src="assets/cyclepaths.png" class="card-img-top"
+            alt="Cyclepaths">
           <div class="card-body">
             <h5 class="card-title">Project1</h5>
             <p class="card-text">Cyclepaths</p>
@@ -42,26 +43,14 @@
 
       </div>
 
-      <div class="col-lg-4 col-md-6">
-        <div class="card" style="width: 18rem;">
-          <img  alt="Card image cap" class="card-img-top img-fluid" src="assets/rf.png"
-            class="card-img-top" alt="web layouts">
-          <div class="card-body">
-            <h5 class="card-title">Assignment 1</h5>
-            <p class="card-text"> Web Refractor </p>
-            <a href="https://kikaiaku.github.io/refractor-homework/#social-media-marketing"
-              class="btn btn-primary">Operation link</a>
-            <a href="https://github.com/kikaiaku/refractor-homework" class="btn btn-primary">Github link</a>
-          </div>
-        </div>
 
-      </div>
 
 
       <div class="col-lg-4 col-md-6">
 
         <div class="card" style="width: 18rem;">
-          <img alt="Card image cap" class="card-img-top img-fluid"  src="assets/codegen.png" class="card-img-top" alt="Code Generator">
+          <img alt="Card image cap" class="card-img-top img-fluid" src="assets/codegen.png" class="card-img-top"
+            alt="Code Generator">
           <div class="card-body">
             <h5 class="card-title">Assignment 2</h5>
             <p class="card-text">Password Generator </p>
@@ -75,7 +64,8 @@
       <div class="col-lg-4 col-md-6">
 
         <div class="card" style="width: 18rem;">
-          <img alt="Card image cap" class="card-img-top img-fluid" src="assets/codeq.png" class="card-img-top" alt="code quiz">
+          <img alt="Card image cap" class="card-img-top img-fluid" src="assets/codeq.png" class="card-img-top"
+            alt="code quiz">
           <div class="card-body">
             <h5 class="card-title">Assignment 3</h5>
             <p class="card-text">Code Quiz</p>
@@ -88,7 +78,8 @@
 
       <div class="col-lg-4 col-md-6 4">
         <div class="card" style="width: 18rem;">
-          <img alt="Card image cap" class="card-img-top img-fluid" src="assets/dayplanner.png" class="card-img-top" alt="day planner">
+          <img alt="Card image cap" class="card-img-top img-fluid" src="assets/dayplanner.png" class="card-img-top"
+            alt="day planner">
           <div class="card-body">
             <h5 class="card-title">Assignment 4</h5>
             <p class="card-text">Day planner</p>
@@ -99,7 +90,8 @@
       </div>
       <div class="col-lg-4 col-md-6 ">
         <div class="card" style="width: 18rem;">
-          <img alt="Card image cap" class="card-img-top img-fluid" src="assets/fiveday.png" class="card-img-top" alt="...">
+          <img alt="Card image cap" class="card-img-top img-fluid" src="assets/fiveday.png" class="card-img-top"
+            alt="...">
           <div class="card-body">
             <h5 class="card-title">Assignment 5</h5>
             <p class="card-text">Five Day Forecast</p>
@@ -115,4 +107,5 @@
 <footer id="footer">
   Created by Tom Scarborough.
 </footer>
+
 </html>
