--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="container">
-        <div id="name">Tom Scarborough 
+        <div id="name">Tom Scarborough
 
         </div>
 
@@ -48,6 +48,7 @@
             </div>
             <div class="row">
                 <div id="link">
+                    <a href="assets/tomResume.pdf" class="btn btn-primary">Resume</a>
                     <a href="https://github.com/kikaiaku" class="btn btn-primary">Github Profile</a>
                     <a href="https://www.linkedin.com/in/thomas-scarborough-6336b144/" class="btn btn-primary">Linkedin
                         Profile</a>
@@ -57,7 +58,7 @@
             </div>
         </div>
     </div>
-    
+
 </body>
 <footer id="footer">
     Created by Tom Scarborough.
