--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,17 @@
                 <button type="submit" class="btn btn-primary col-md-6">Submit</button>
             </div>
         </form>
+        <br>
+        <div class="row">
+            <div id="link">
+                <a href="assets/tomResume.pdf" class="btn btn-primary">Resume</a>
+                <a href="https://github.com/kikaiaku" class="btn btn-primary">Github Profile</a>
+                <a href="https://www.linkedin.com/in/thomas-scarborough-6336b144/" class="btn btn-primary">Linkedin
+                    Profile</a>
+
+
+            </div>
+        </div>
     </div>
 
 
@@ -55,4 +66,5 @@
 <footer id="footer">
     Created by Tom Scarborough.
 </footer>
+
 </html>
