--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="row">
                 <div id="link">
-                    <a href="assets/tomResume.pdf" class="btn btn-primary">Resume</a>
+                    <a href="assets/TomResume.pdf" class="btn btn-primary">Resume</a>
                     <a href="https://github.com/kikaiaku" class="btn btn-primary">Github Profile</a>
                     <a href="https://www.linkedin.com/in/thomas-scarborough-6336b144/" class="btn btn-primary">Linkedin
                         Profile</a>
