--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,24 +8,20 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="./style.css">
   <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Faster+One&family=Press+Start+2P&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
   <div class="container">
-    <div id="name">
-      Tom Scarborough
 
-    </div>
 
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <a class="nav-link" href="index.html">About</a>
-      <a class="nav-link" href="Portfolio.html">Portfolio</a>
+      <a class="nav-link" href="portfolio.html">Portfolio</a>
       <a class="nav-link" href="contact.html">Contact</a>
-
-
-
     </nav>
     <div class="row justify-content-center">
       <div class="col-md-6 col-lg-4">
@@ -33,10 +29,25 @@
           <img alt="Card image cap" class="card-img-top img-fluid " src="assets/cyclepaths.png" class="card-img-top"
             alt="Cyclepaths">
           <div class="card-body">
-            <h5 class="card-title">Project1</h5>
-            <p class="card-text">Cyclepaths</p>
+            <h5 class="card-title">Cyclepaths</h5>
+            <p class="card-text">Me and 4 others created an app that helps cyclists find events and
+              incidents in their area.</p>
             <a href="https://tmsmith1150.github.io/cyclepaths/" class="btn btn-primary">Operation link</a>
             <a href="https://github.com/tmsmith1150/cyclepaths" class="btn btn-primary">Github link</a>
+
+          </div>
+        </div>
+
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <div class="card" style="width: 18rem;">
+          <img alt="Card image cap" class="card-img-top img-fluid " src="assets/project2.png" class="card-img-top"
+            alt="Budget Tracker">
+          <div class="card-body">
+            <h5 class="card-title">Budget Tracker</h5>
+            <p class="card-text">Me and 4 others created this app to help people manage their finances.</p>
+            <a href="https://budget-tracker-project.herokuapp.com/" class="btn btn-primary">Operation link</a>
+            <a href="https://github.com/CallieCrownover/budget_tracker" class="btn btn-primary">Github link</a>
 
           </div>
         </div>
@@ -52,8 +63,8 @@
           <img alt="Card image cap" class="card-img-top img-fluid" src="assets/codegen.png" class="card-img-top"
             alt="Code Generator">
           <div class="card-body">
-            <h5 class="card-title">Assignment 2</h5>
-            <p class="card-text">Password Generator </p>
+            <h5 class="card-title">Password Generator</h5>
+            <p class="card-text">This generates a random password after filling out what you want in it. </p>
             <a href="https://kikaiaku.github.io/Passwordgenerator.io/" class="btn btn-primary">Operation link</a>
             <a href="https://github.com/kikaiaku/Passwordgenerator.io" class="btn btn-primary">Github link</a>
           </div>
@@ -67,8 +78,8 @@
           <img alt="Card image cap" class="card-img-top img-fluid" src="assets/codeq.png" class="card-img-top"
             alt="code quiz">
           <div class="card-body">
-            <h5 class="card-title">Assignment 3</h5>
-            <p class="card-text">Code Quiz</p>
+            <h5 class="card-title">Code Quiz</h5>
+            <p class="card-text">This app tests your knowledge on code. </p>
             <a href="https://kikaiaku.github.io/codequiz.io/" class="btn btn-primary">Operation link</a>
             <a href="https://github.com/kikaiaku/codequiz.io" class="btn btn-primary">Github link</a>
           </div>
@@ -81,8 +92,8 @@
           <img alt="Card image cap" class="card-img-top img-fluid" src="assets/dayplanner.png" class="card-img-top"
             alt="day planner">
           <div class="card-body">
-            <h5 class="card-title">Assignment 4</h5>
-            <p class="card-text">Day planner</p>
+            <h5 class="card-title">Day Planner</h5>
+            <p class="card-text">This is used to help plan your day out.</p>
             <a href="https://kikaiaku.github.io/dayplanner.io/" class="btn btn-primary">Operation link</a>
             <a href="https://github.com/kikaiaku/dayplanner.io" class="btn btn-primary">Github link</a>
           </div>
@@ -93,8 +104,8 @@
           <img alt="Card image cap" class="card-img-top img-fluid" src="assets/fiveday.png" class="card-img-top"
             alt="...">
           <div class="card-body">
-            <h5 class="card-title">Assignment 5</h5>
-            <p class="card-text">Five Day Forecast</p>
+            <h5 class="card-title">Five Day Forecast</h5>
+            <p class="card-text">This app gives you the local 5 day forecast. </p>
             <a href="https://kikaiaku.github.io/fivedayforecast.io/" class="btn btn-primary">Operation link</a>
             <a href="https://github.com/kikaiaku/fivedayforecast.io" class="btn btn-primary">Github link</a>
           </div>
@@ -105,8 +116,8 @@
           <img alt="Card image cap" class="card-img-top img-fluid" src="assets/HotBunns.png" class="card-img-top"
             alt="...">
           <div class="card-body">
-            <h5 class="card-title">Burger heroku app</h5>
-            <p class="card-text">Hot Bunns</p>
+            <h5 class="card-title">Hot Bunns</h5>
+            <p class="card-text">This allows you to create items on a database, and then delete them.</p>
             <a href="https://frozen-refuge-12195.herokuapp.com/" class="btn btn-primary">Operation link</a>
             <a href="https://github.com/kikaiaku/express-handlebars.io" class="btn btn-primary">Github link</a>
           </div>
@@ -114,7 +125,7 @@
       </div>
     </div>
   </div>
-  </div>
+
 </body>
 <footer id="footer">
   Created by Tom Scarborough.
