--- a/index.html
+++ b/index.html
@@ -4,29 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about me </title>
+    <title>Home Page </title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Faster+One&family=Press+Start+2P&display=swap"
+        rel="stylesheet">
 
 
 </head>
 
 <body>
     <div class="container">
-        <div id="name">Tom Scarborough
-
-        </div>
-
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <a class="nav-link" href="index.html">About</a>
-            <a class="nav-link" href="Portfolio.html">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
             <a class="nav-link" href="contact.html">Contact</a>
-
-
-
         </nav>
         <div class="row">
             <div class="col-md-6">
@@ -34,29 +29,53 @@
                     alt="Responsive image">
             </div>
             <div class="col-md-6">
-                <p class="indexBody"> My name is Tom Scarborough. I have been working at Harris Teeter for 15 years now
-                    as an assistant
-                    market manager. My goals in life are to be able to live a healthy life, and have a family. I want to
-                    be able to live life without fear of being able to pay the bills. My hobbie is creating art on the
-                    side, and creating code based games. I am married with 3 fur babies.
+                <div>
+                    <p class="tom">My name is Tom Scarborough</p>
                     <br>
-                    <br>
-                    I have been trained in: HTML, JavaScript, CSS, and C#. I am currently going through UNCC, and they
-                    are giving me the knowledge to apply what I have learned in the real world environment. I have
-                    worked with a group to create an app that helps cyclist find events and incidents in their area.
-                </p>
-            </div>
-            <div class="row">
-                <div id="link">
-                    <a href="assets/TomResume.pdf" class="btn btn-primary">Resume</a>
-                    <a href="https://github.com/kikaiaku" class="btn btn-primary">Github Profile</a>
-                    <a href="https://www.linkedin.com/in/thomas-scarborough-6336b144/" class="btn btn-primary">Linkedin
-                        Profile</a>
-
-
+                    <p class="indexBody1">
+                        I have been trained in: HTML, JavaScript, CSS, node.js, MYSQL, mongoDB, JSON, REACT, and C#. I
+                        am
+                        currently going through UNCC, and they are giving me the knowledge to apply what I have learned
+                        in
+                        the real world environment.
+                    </p>
                 </div>
+                <br>
+
+            </div>
+            <div class="col-sm-12">
+                <p class="tom">Management Through Harris Teeter</p>
+                <br>
+                <p class="indexBody1">
+                    I have been working at Harris Teeter for 15 years now as an assistant market manager. What I
+                    have
+                    developed through Harris Teeter include:</p>
+                <ul class="bullet-job">
+                    <li>Leadership skills</li>
+                    <li>Complex problem solving </li>
+                    <li>Finding peaceful resolutions to high stress situations</li>
+                    <li>Mentorship</li>
+                    <li>Dedication to projects, and the ability to see them through to the end</li>
+                    <li>Hiring process</li>
+
+                </ul>
+            </div>
+
+
+
+        </div>
+
+        <div class="row">
+            <div id="link">
+                <a href="/resume" class="btn btn-primary">Resume</a>
+                <a href="https://github.com/kikaiaku" class="btn btn-primary">Github Profile</a>
+                <a href="https://www.linkedin.com/in/thomas-scarborough-6336b144/" class="btn btn-primary">Linkedin
+                    Profile</a>
+
+
             </div>
         </div>
+    </div>
     </div>
 
 </body>
